
====
NEWS
====

- 1.6.1 -

  * Add build date to show-version
  * Added options to chown/chmod the socket and to create the socket before chroot() (fixes #1906)
  * Updated man page

- 1.6.0 - 2009-02-28

  * Separated spawn-fcgi from lighttpd
  * Remove limits for php children; per default the PHP_FCGI_CHILDREN var is not changed (php defaults to no children, one worker)
  * Modified the log messages format (more details on errors, no source line)
  * Only try to connect to unix socket (not tcp) before spawning (fixes again #1575)
  * Only disconnect from terminal in fork mode (keep stderr/stdout open in nofork mode)
  * Allow numerical user and group ids for -u/-g (fixes #1141)
  * Ignore pid-file option in no-fork mode (instead of producing empty file)
  * Fix error handling for unix-socket-connect test
  * Man page update
  * Use header include order from 1.4.x
  * Fix segfault due to uninitialized var